OKTA-720638: Fix OASv3 spec - unable to access IdP links (#1519)
* OKTA-720638: Fix OASv3 spec - unable to access IdP links

* Updated revision in pom.xml files

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -26055,8 +26055,42 @@ components:
           $ref: '#/components/schemas/IdentityProviderType'
         _links:
           type: object
-          additionalProperties:
-              $ref: '#/components/schemas/HrefObjectSelfLink'
+          additionalProperties: true
+          allOf:
+            - $ref: '#/components/schemas/LinksSelf'
+            - properties:
+                acs:
+                  description: SAML 2.0 Assertion Consumer Service URL for the Okta SP
+                  allOf:
+                    - $ref: '#/components/schemas/HrefObject'
+                authorize:
+                  description: OAuth 2.0 authorization endpoint for the IdP OAuth 2.0 Authorization Code flow
+                  allOf:
+                    - $ref: '#/components/schemas/HrefObject'
+                clientRedirectUri:
+                  description: Redirect URI for the OAuth 2.0 Authorization Code flow
+                  allOf:
+                    - $ref: '#/components/schemas/HrefObject'
+                metadata:
+                  description: 'Federation metadata document for the IdP (for example: SAML 2.0 Metadata)'
+                  allOf:
+                    - $ref: '#/components/schemas/HrefObject'
+                users:
+                  description: IdP users
+                  allOf:
+                    - $ref: '#/components/schemas/HrefObject'
+                deactivate:
+                  description: Deactivate IdP
+                  allOf:
+                    - $ref: '#/components/schemas/HrefObject'
+                activate:
+                  description: Activate IdP
+                  allOf:
+                    - $ref: '#/components/schemas/HrefObject'
+                keys:
+                  description: IdP keys
+                  allOf:
+                    - $ref: '#/components/schemas/HrefObject'
     IdentityProviderApplicationUser:
       type: object
       properties:
