Update api.yaml with APPLE IdP type

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -38533,6 +38533,7 @@ components:
     IdentityProviderType:
       type: string
       enum:
+        - APPLE
         - AgentlessDSSO
         - FACEBOOK
         - GOOGLE
