--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,7 +99,15 @@ jobs:
       - run:
           name: Run Reversing Labs Wrapper Scanner
           command: |
-            rl-wrapper -h
+            echo ${CIRCLE_WORKING_DIRECTORY/#\~/$HOME}
+            rl-wrapper \
+              --artifact ${CIRCLE_WORKING_DIRECTORY/#\~/$HOME} \
+              --name $CIRCLE_PROJECT_REPONAME\
+              --version $CIRCLE_SHA1\
+              --repository $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME \
+              --commit $CIRCLE_SHA1 \
+              --build-env "circleci" \
+              --suppress_output
 workflows:
   "Circle CI Tests":
     jobs:
