--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,9 +99,9 @@ jobs:
       - run:
           name: Run Reversing Labs Wrapper Scanner
           command: |
-            echo ${CIRCLE_WORKING_DIRECTORY/#\~/$HOME}
+            echo "Scanning " ${CIRCLE_WORKING_DIRECTORY/#\~/$HOME}/api
             rl-wrapper \
-              --artifact ${CIRCLE_WORKING_DIRECTORY/#\~/$HOME} \
+              --artifact ${CIRCLE_WORKING_DIRECTORY/#\~/$HOME}/api \
               --name $CIRCLE_PROJECT_REPONAME\
               --version $CIRCLE_SHA1\
               --repository $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME \
