--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,8 @@ version: 2.1
 
 orbs:
   general-platform-helpers: okta/general-platform-helpers@1.8
+  python: circleci/python@2.1.1
+  aws-cli: circleci/aws-cli@5.1
 
 aliases:
 
@@ -51,7 +53,7 @@ jobs:
     steps:
       - checkout
       - run: npm install
-      - run: mvn clean install -Pci -Dlicense.skip=true -Dmaven.test.skip.exec=true
+      - run: mvn clean install -Pci -Dlicense.skip=true -Dmaven.test.skip.exec=true -DskipITs
       - general-platform-helpers/step-load-dependencies
       - general-platform-helpers/step-run-snyk-monitor:
           scan-all-projects: false
@@ -59,6 +61,53 @@ jobs:
           run-on-non-main: true
           additional-arguments: "--maven-aggregate-project"
 
+  reversing-labs:
+    docker:
+      - image: cimg/openjdk:21.0.2-node
+    steps:
+      - checkout
+      - run: npm install
+      - run: mvn clean install -Pci -Dlicense.skip=true -Dmaven.test.skip.exec=true -DskipITs
+      # Necessary to Install rl wrapper
+      - run:
+          name: Install Python
+          command: |
+            sudo apt-get update
+            sudo apt-get install -y python3 python3-pip
+            sudo pip install --upgrade pip
+      # Download the scanner from Okta Security
+      - run:
+          name: Download Reverse Labs Scanner
+          command: |
+            curl https://dso-resources.oktasecurity.com/scanner \
+              -H "x-api-key: $DSO_RLSECURE_TOKEN" \
+              --output rl_wrapper-0.0.2+35ababa-py3-none-any.whl
+      # Install the wrapper that was downloaded
+      - run:
+          name: Install RL Wrapper
+          command: |
+            pip install ./rl_wrapper-0.0.2+35ababa-py3-none-any.whl
+      # Setup the AWS profile
+      - aws-cli/setup:
+          profile_name: default
+          role_arn: $AWS_ARN
+          region: us-east-1
+      # Get the credentials and save to env
+      - run: >-
+          eval "$(aws configure export-credentials --profile default --format env)" 2> /dev/null
+      # Run the wrapper, do not change anything here
+      - run:
+          name: Run Reversing Labs Wrapper Scanner
+          command: |
+            echo "Scanning " ${CIRCLE_WORKING_DIRECTORY/#\~/$HOME}/api
+            rl-wrapper \
+              --artifact ${CIRCLE_WORKING_DIRECTORY/#\~/$HOME}/api \
+              --name $CIRCLE_PROJECT_REPONAME\
+              --version $CIRCLE_SHA1\
+              --repository $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME \
+              --commit $CIRCLE_SHA1 \
+              --build-env "circleci" \
+              --suppress_output
 workflows:
   "Circle CI Tests":
     jobs:
@@ -72,5 +121,10 @@ workflows:
           name: execute-snyk
           requires:
             - jdk21
+          context:
+            - static-analysis
+  "Malware Scanner":
+    jobs:
+      - reversing-labs:
           context:
             - static-analysis
