OpenAPI: UiSchemaObject#elements should be an array

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -64068,7 +64068,9 @@ components:
           description: Specifies the button label for the `Submit` button at the bottom of the enrollment form
           default: Submit
         elements:
-          $ref: '#/components/schemas/UIElement'
+          type: array
+          items:
+            $ref: '#/components/schemas/UIElement'
         label:
           type: string
           description: Specifies the label at the top of the enrollment form under the logo
