--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -11287,6 +11287,7 @@ paths:
       operationId: getHookKey
       parameters:
         - name: id
+          required: true
           description: A valid key ID
           required: true
           in: path
@@ -62472,7 +62473,7 @@ components:
       type: string
     SplunkToken:
       description: The HEC token for your Splunk Cloud HTTP Event Collector. The token value is set at object creation, but isn't returned.
-      example: 11111111-1111-2222-2222-222222222222
+      example: a747a818-a4c4-4446-8a87-704216495a08
       writeOnly: true
       type: string
       pattern: "^[0-9A-Fa-f]{8}-[0-9A-Fa-f]{4}-[1-5][0-9A-Fa-f]{3}-[89ABab][0-9A-Fa-f]{3}-[0-9A-Fa-f]{12}$"
