OpenApi: Fix DynamicNetworkZone TypeEnum

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -50939,7 +50939,7 @@ components:
               enum:
                 - 'null'
                 - Any
-                - Tor
+                - TorAnonymizer
                 - NotTorAnonymizer
               x-enumDescriptions:
                 'null': (Or `""`) No proxy used
