--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -52311,6 +52311,7 @@ components:
           items:
             type: string
     GroupProfile:
+      additionalProperties: true
       description: |-
         Specifies required and optional properties for a Group. The `objectClass` of a Group determines which additional properties are available.
 
