--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.okta.sdk</groupId>
     <artifactId>okta-sdk-root</artifactId>
-    <version>20.0.1-SNAPSHOT</version>
+    <version>20.0.1</version>
     <packaging>pom</packaging>
 
     <name>Okta Java SDK</name>
@@ -68,12 +68,12 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-api</artifactId>
-                <version>20.0.1-SNAPSHOT</version>
+                <version>20.0.1</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-impl</artifactId>
-                <version>20.0.1-SNAPSHOT</version>
+                <version>20.0.1</version>
             </dependency>
 
             <!-- Other Okta Projects -->
@@ -103,14 +103,14 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-integration-tests</artifactId>
-                <version>20.0.1-SNAPSHOT</version>
+                <version>20.0.1</version>
             </dependency>
 
             <!-- Examples -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-examples-quickstart</artifactId>
-                <version>20.0.1-SNAPSHOT</version>
+                <version>20.0.1</version>
             </dependency>
 
             <!-- Logging -->
@@ -373,5 +373,9 @@
             </build>
         </profile>
     </profiles>
+
+  <scm>
+    <tag>okta-sdk-root-20.0.1</tag>
+  </scm>
 </project>
 
