Fix semgrep jobs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  general-platform-helpers: okta/general-platform-helpers@1.8
+  platform-helpers: okta/platform-helpers@1
   python: circleci/python@2.1.1
   aws-cli: circleci/aws-cli@5.1
 
@@ -113,7 +113,7 @@ workflows:
     jobs:
       - jdk11
       - jdk21
-      - general-platform-helpers/job-semgrep-scan:
+      - platform-helpers/job-semgrep-scan:
           name: "Scan with Semgrep"
           context:
             - static-analysis
