Fix semgrep jobs (#1595)
* Fix semgrep jobs

---------

Co-authored-by: Renaud Lepage (Work Profile) <renaud.lepage@okta.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs:
   general-platform-helpers: okta/general-platform-helpers@1.8
+  platform-helpers: okta/platform-helpers@1
   python: circleci/python@2.1.1
   aws-cli: circleci/aws-cli@5.1
 
@@ -9,7 +10,6 @@ aliases:
 
   - &build_steps
     - checkout
-    - general-platform-helpers/step-load-dependencies
     - run: java -version
     - run: mvn clean install -Pci -Dlicense.skip=true -Dmaven.test.skip.exec=true
     - run: mvn test
@@ -54,7 +54,6 @@ jobs:
       - checkout
       - run: npm install
       - run: mvn clean install -Pci -Dlicense.skip=true -Dmaven.test.skip.exec=true -DskipITs
-      - general-platform-helpers/step-load-dependencies
       - general-platform-helpers/step-run-snyk-monitor:
           scan-all-projects: false
           skip-unresolved: false
@@ -113,7 +112,7 @@ workflows:
     jobs:
       - jdk11
       - jdk21
-      - general-platform-helpers/job-semgrep-scan:
+      - platform-helpers/job-semgrep-scan:
           name: "Scan with Semgrep"
           context:
             - static-analysis
