OpenApi: Add missing RiskScorePolicyRuleCondition and RiskPolicyRuleCondition to OktaSignOnPolicyRuleConditions
OpenApi: Update InlineHooks to match the latest spec

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -56960,6 +56960,10 @@ components:
               $ref: '#/components/schemas/PolicyPeopleCondition'
             identityProvider:
               $ref: '#/components/schemas/IdentityProviderPolicyRuleCondition'
+            risk:
+              $ref: '#/components/schemas/RiskPolicyRuleCondition'
+            riskScore:
+              $ref: '#/components/schemas/RiskScorePolicyRuleCondition'
     OktaSignOnPolicyRuleSignonActions:
       type: object
       properties:
