--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -54182,6 +54182,7 @@ components:
       properties:
         resend:
           items:
+            - description: Resends the factor enrollment challenge. See [Resend a Factor enrollment](/openapi/okta-management/management/tag/UserFactor/#tag/UserFactor/operation/resendEnrollFactor).
             - $ref: '#/components/schemas/HrefObject'
       readOnly: true
     LinksSelf:
