OKTA-852583: Fix spec definition of `LinksResend` to address deserialization issue with enrollfactor response (#1597)
* OKTA-852583: Fix spec definition of UserFactor LinksResend - address deserialization issue with enrollfactor

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -54181,7 +54181,7 @@ components:
       type: object
       properties:
         resend:
-          allOf:
+          items:
             - description: Resends the factor enrollment challenge. See [Resend a Factor enrollment](/openapi/okta-management/management/tag/UserFactor/#tag/UserFactor/operation/resendEnrollFactor).
             - $ref: '#/components/schemas/HrefObject'
       readOnly: true
