adding missing attributes for activateFactor

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -21696,6 +21696,7 @@ paths:
           content:
             application/json:
               schema:
+                $ref: '#/components/schemas/UserFactorActivateResponse'
                 type: object
                 properties:
                   id:
