--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>com.okta.sdk</groupId>
         <artifactId>okta-sdk-root</artifactId>
-        <version>21.0.1-SNAPSHOT</version>
+        <version>22.0.0</version>
     </parent>
 
     <artifactId>okta-sdk-impl</artifactId>
