--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.okta.sdk</groupId>
     <artifactId>okta-sdk-root</artifactId>
-    <version>21.0.1-SNAPSHOT</version>
+    <version>22.0.0</version>
     <packaging>pom</packaging>
 
     <name>Okta Java SDK</name>
@@ -68,12 +68,12 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-api</artifactId>
-                <version>21.0.1-SNAPSHOT</version>
+                <version>22.0.0</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-impl</artifactId>
-                <version>21.0.1-SNAPSHOT</version>
+                <version>22.0.0</version>
             </dependency>
 
             <!-- Other Okta Projects -->
@@ -103,14 +103,14 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-integration-tests</artifactId>
-                <version>21.0.1-SNAPSHOT</version>
+                <version>22.0.0</version>
             </dependency>
 
             <!-- Examples -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-examples-quickstart</artifactId>
-                <version>21.0.1-SNAPSHOT</version>
+                <version>22.0.0</version>
             </dependency>
 
             <!-- Logging -->
