OpenApi: Add missing ChromeOs to PolicyPlatformOperatingSystemType enum
OpenApi: Update InlineHooks to match the latest spec

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -58787,6 +58787,7 @@ components:
         - ANY
         - IOS
         - OSX
+        - CHROMEOS
         - OTHER
         - WINDOWS
     PolicyPlatformType:
