--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.okta.sdk</groupId>
     <artifactId>okta-sdk-root</artifactId>
-    <version>22.0.1</version>
+    <version>22.0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Okta Java SDK</name>
@@ -374,9 +374,5 @@
             </build>
         </profile>
     </profiles>
-
-  <scm>
-    <tag>okta-sdk-root-22.0.1</tag>
-  </scm>
 </project>
 
