--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.okta.sdk</groupId>
     <artifactId>okta-sdk-root</artifactId>
-    <version>22.0.2-SNAPSHOT</version>
+    <version>23.0.0</version>
     <packaging>pom</packaging>
 
     <name>Okta Java SDK</name>
